django.log
[07/Oct/2018 22:07:14] "GET / HTTP/1.1" 200 13208
[07/Oct/2018 22:07:14] "GET /static/rest_framework/css/default.css HTTP/1.1" 200 1131
[07/Oct/2018 22:07:14] "GET /static/rest_framework/css/prettify.css HTTP/1.1" 200 817
[07/Oct/2018 22:07:14] "GET /static/rest_framework/js/ajax-form.js HTTP/1.1" 200 3597
[07/Oct/2018 22:07:14] "GET /static/rest_framework/css/bootstrap-tweaks.css HTTP/1.1" 200 3385
[07/Oct/2018 22:07:14] "GET /static/rest_framework/js/jquery-3.3.1.min.js HTTP/1.1" 200 86927
[07/Oct/2018 22:07:14] "GET /static/rest_framework/css/bootstrap.min.css HTTP/1.1" 200 121200
[07/Oct/2018 22:07:14] "GET /static/rest_framework/js/csrf.js HTTP/1.1" 200 1735
[07/Oct/2018 22:07:14] "GET /static/rest_framework/js/bootstrap.min.js HTTP/1.1" 200 37045
[07/Oct/2018 22:07:14] "GET /static/rest_framework/js/prettify-min.js HTTP/1.1" 200 13632
[07/Oct/2018 22:07:14] "GET /static/rest_framework/js/default.js HTTP/1.1" 200 1262
[07/Oct/2018 22:07:14] "GET /static/rest_framework/img/grid.png HTTP/1.1" 200 1458
Not Found: /favicon.ico
[07/Oct/2018 22:07:15] "GET /favicon.ico HTTP/1.1" 404 37
Internal Server Error: /
Traceback (most recent call last):
  File "/usr/local/lib/python3.6/site-packages/django/core/handlers/exception.py", line 41, in inner
    response = get_response(request)
  File "/usr/local/lib/python3.6/site-packages/django/core/handlers/base.py", line 187, in _get_response
    response = self.process_exception_by_middleware(e, request)
  File "/usr/local/lib/python3.6/site-packages/django/core/handlers/base.py", line 185, in _get_response
    response = wrapped_callback(request, *callback_args, **callback_kwargs)
  File "/usr/local/lib/python3.6/site-packages/django/views/decorators/csrf.py", line 58, in wrapped_view
    return view_func(*args, **kwargs)
  File "/usr/local/lib/python3.6/site-packages/rest_framework/viewsets.py", line 103, in view
    return self.dispatch(request, *args, **kwargs)
  File "/usr/local/lib/python3.6/site-packages/rest_framework/views.py", line 483, in dispatch
    response = self.handle_exception(exc)
  File "/usr/local/lib/python3.6/site-packages/rest_framework/views.py", line 443, in handle_exception
    self.raise_uncaught_exception(exc)
  File "/usr/local/lib/python3.6/site-packages/rest_framework/views.py", line 480, in dispatch
    response = handler(request, *args, **kwargs)
  File "/usr/local/lib/python3.6/site-packages/rest_framework/mixins.py", line 21, in create
    self.perform_create(serializer)
  File "/usr/local/lib/python3.6/site-packages/rest_framework/mixins.py", line 26, in perform_create
    serializer.save()
  File "/usr/local/lib/python3.6/site-packages/rest_framework/serializers.py", line 214, in save
    self.instance = self.create(validated_data)
  File "/usr/local/lib/python3.6/site-packages/rest_framework/serializers.py", line 940, in create
    instance = ModelClass.objects.create(**validated_data)
  File "/usr/local/lib/python3.6/site-packages/django/db/models/manager.py", line 85, in manager_method
    return getattr(self.get_queryset(), name)(*args, **kwargs)
  File "/usr/local/lib/python3.6/site-packages/django/db/models/query.py", line 393, in create
    obj.save(force_insert=True, using=self.db)
  File "/trademark/code/retrieval-search-engine/WebAnalyzer/models.py", line 39, in save
    opts=ast.literal_eval(self.options)
  File "/usr/local/lib/python3.6/ast.py", line 48, in literal_eval
    node_or_string = parse(node_or_string, mode='eval')
  File "/usr/local/lib/python3.6/ast.py", line 35, in parse
    return compile(source, filename, mode, PyCF_ONLY_AST)
  File "<unknown>", line 0
    
    ^
SyntaxError: unexpected EOF while parsing
[07/Oct/2018 22:09:26] "POST / HTTP/1.1" 500 129757
[07/Oct/2018 22:10:35] "GET / HTTP/1.1" 200 13768
[07/Oct/2018 22:10:37] "GET /admin HTTP/1.1" 301 0
[07/Oct/2018 22:10:37] "GET /admin/ HTTP/1.1" 302 0
[07/Oct/2018 22:10:37] "GET /admin/login/?next=/admin/ HTTP/1.1" 200 1670
[07/Oct/2018 22:10:37] "GET /static/admin/css/base.css HTTP/1.1" 200 16066
[07/Oct/2018 22:10:37] "GET /static/admin/css/login.css HTTP/1.1" 200 1203
[07/Oct/2018 22:10:37] "GET /static/admin/css/fonts.css HTTP/1.1" 200 423
[07/Oct/2018 22:10:37] "GET /static/admin/fonts/Roboto-Regular-webfont.woff HTTP/1.1" 200 80304
[07/Oct/2018 22:10:37] "GET /static/admin/fonts/Roboto-Light-webfont.woff HTTP/1.1" 200 81348
Not Found: /favicon.ico
[07/Oct/2018 22:10:37] "GET /favicon.ico HTTP/1.1" 404 37
[07/Oct/2018 22:10:37] "GET /static/admin/fonts/Roboto-Bold-webfont.woff HTTP/1.1" 200 82564
[07/Oct/2018 22:10:40] "POST /admin/login/?next=/admin/ HTTP/1.1" 302 0
[07/Oct/2018 22:10:40] "GET /admin/ HTTP/1.1" 200 4264
[07/Oct/2018 22:10:40] "GET /static/admin/css/dashboard.css HTTP/1.1" 200 412
[07/Oct/2018 22:10:40] "GET /static/admin/img/icon-addlink.svg HTTP/1.1" 200 331
[07/Oct/2018 22:10:40] "GET /static/admin/img/icon-changelink.svg HTTP/1.1" 200 380
Not Found: /favicon.ico
[07/Oct/2018 22:10:40] "GET /favicon.ico HTTP/1.1" 404 37
[07/Oct/2018 22:13:54] "GET /admin/extractorManager/extractormodel/ HTTP/1.1" 200 3168
[07/Oct/2018 22:13:54] "GET /static/admin/css/changelists.css HTTP/1.1" 200 6170
[07/Oct/2018 22:13:54] "GET /static/admin/js/core.js HTTP/1.1" 200 7976
[07/Oct/2018 22:13:54] "GET /static/admin/js/admin/RelatedObjectLookups.js HTTP/1.1" 200 6591
[07/Oct/2018 22:13:54] "GET /static/admin/js/jquery.init.js HTTP/1.1" 200 363
[07/Oct/2018 22:13:54] "GET /admin/jsi18n/ HTTP/1.1" 200 8296
[07/Oct/2018 22:13:54] "GET /static/admin/js/actions.js HTTP/1.1" 200 6501
[07/Oct/2018 22:13:54] "GET /static/admin/js/vendor/jquery/jquery.js HTTP/1.1" 200 258648
[07/Oct/2018 22:13:54] "GET /static/admin/js/urlify.js HTTP/1.1" 200 8186
[07/Oct/2018 22:13:54] "GET /static/admin/js/prepopulate.js HTTP/1.1" 200 1538
[07/Oct/2018 22:13:54] "GET /static/admin/js/vendor/xregexp/xregexp.js HTTP/1.1" 200 128820
[07/Oct/2018 22:13:54] "GET /static/admin/img/tooltag-add.svg HTTP/1.1" 200 331
Not Found: /favicon.ico
[07/Oct/2018 22:13:54] "GET /favicon.ico HTTP/1.1" 404 37
[07/Oct/2018 22:13:56] "GET /admin/extractorManager/extractormodel/add/ HTTP/1.1" 200 5314
[07/Oct/2018 22:13:56] "GET /static/admin/css/forms.css HTTP/1.1" 200 8173
[07/Oct/2018 22:13:56] "GET /static/admin/js/change_form.js HTTP/1.1" 200 712
[07/Oct/2018 22:13:56] "GET /static/admin/js/prepopulate_init.js HTTP/1.1" 200 495
[07/Oct/2018 22:13:56] "GET /admin/jsi18n/ HTTP/1.1" 200 8296
[07/Oct/2018 22:13:56] "GET /static/admin/css/widgets.css HTTP/1.1" 200 10340
Not Found: /favicon.ico
[07/Oct/2018 22:13:56] "GET /favicon.ico HTTP/1.1" 404 37
